
** Multiple declarations
The `declare` command can now accept multiple names like:

    cdecl> declare p, q as pointer to int
    int *p, *q;

** Digraph & Trigraph output
Digraphs and trigraphs are no longer emitted in a language in which they aren't
supported.

** Help options
The `help` command now also acceptions `options`.  Help for options is now
printed separately.

** Fixed multiple nested declarations crash
Explaining a declaration like:

    explain int (*p), (*q)

is now fixed.


* Changes in Cdecl 11.0

** K&R C function returning `struct`
Now correctly forbidding functions returning `struct` in K&R C.

** Digraphs before C95
Either using a digraph or setting the digraphs option in a language before C95
now prints a warning that digraphs are not supported until C95.

** Trigraphs in K&R C
Either using a trigraph or setting the trigraphs option in K&R C now prints a
warning that trigraphs are not supported until C89.

** Optional `()` for `destructor`
Declaring a destructor in English now optionally allows `()`.

** C++23
C++23 is both now allowed for and the default C++ version.  However, there are
as of yet no differences with respect to declarations between it and C++20.

** `inline namespace` command
`inline` is now a command in C++11 and later (presumed to be followed by
`namespace`) and `namespace` is auto-completable.

** Nested `inline` namespaces
C++20's nested inline namespaces are now supported:

    namespace A::inline B { // ...

** `show typedef` & `show using` autocompletion
The keywords `typedef` and `using` are now auto-completable.

** In-class `default`, `delete`, and `noexcept` constructors
These are now accepted.

** `static` `main()` in C
This is now correctly forbidden.

** Fixed C++ raw string literals
A raw string literal like `R"abc(X)ab)abc"` was previously not parsed
correctly.

** Fixed multiple pointers to function having a Microsoft calling convention
Declarations like:

    cdecl> explain int (__stdcall **f)()
